--- a/control_UE/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/control_UE/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -164,10 +164,16 @@ LastLevel=/Game/FORGET_Natael/Maps/ThirdPersonMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
+OpenAssetsAtExit=/Game/FORGET_Natael/Blueprints/BP_Money.BP_Money
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/FORGET_Natael/Maps/ThirdPersonMap
+MRUItem0=/Game/FORGET_Natael/Blueprints/BP_Money
+MRUItem1=/Game/FORGET_Natael/Blueprints/BP_ThirdPersonGameMode
+MRUItem2=/Game/FORGET_Natael/Blueprints/WBP_UI
+MRUItem3=/Game/FORGET_Natael/Maps/ThirdPersonMap
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -251,6 +257,75 @@ PlayerStart.Networking=True
 PlayerStart.WorldPartition=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
+BP_Money_C.TransformCommon=True
+BP_Money_C.Rendering=True
+BP_Money_C.Replication=True
+BP_Money_C.Collision=True
+BP_Money_C.HLOD=True
+BP_Money_C.Physics=True
+BP_Money_C.Networking=True
+BP_Money_C.WorldPartition=True
+BP_Money_C.Input=True
+BP_Money_C.Actor=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Rendering=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=False
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Rendering=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+BP_ThirdPersonGameMode_C.Tick=True
+BP_ThirdPersonGameMode_C.Classes=True
+BP_ThirdPersonGameMode_C.Game=True
+BP_ThirdPersonGameMode_C.GameMode=True
+BP_ThirdPersonGameMode_C.Physics=True
+BP_ThirdPersonGameMode_C.Events=True
+BP_Money_C.Tick=True
+BP_Money_C.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.PathTracing=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -277,4 +352,157 @@ bDisableLoadingOfLastLoadedRegions=False
 bBugItGoLoadRegion=False
 bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FORGET_Natael/Maps/ThirdPersonMap.ThirdPersonMap", ()))
+
+[WidgetTemplatesExpanded]
+Audio=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[PlacementMode]
+RecentlyPlaced=/Game/FORGET_Natael/Blueprints/BP_Money.BP_Money;
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
+
+[UMGEditor.Designer]
+bCommonResolutionSelected=False
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+bLeftMouseDragDoesMarquee=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bResetPlayheadWhenNavigating=False
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowLayerBars=True
+bShowKeyBars=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowStatusBar=True
+bShowTickLines=True
+bShowSequencerToolbar=True
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+SectionColorTints=(B=142,G=102,R=88,A=255)
+SectionColorTints=(B=132,G=137,R=99,A=255)
+SectionColorTints=(B=92,G=127,R=110,A=255)
+SectionColorTints=(B=102,G=142,R=151,A=255)
+SectionColorTints=(B=101,G=119,R=147,A=255)
+SectionColorTints=(B=108,G=95,R=139,A=255)
+SectionColorTints=(B=121,G=74,R=109,A=255)
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+bAutoExpandNodesOnSelection=True
+TreeViewWidth=0.300000
+
+[DetailCategoriesAdvanced]
+TextBlock.Appearance=True
+TextBlock.Accessibility=False
+
+[AssetEditorToolkitTabLocation]
+/Game/FORGET_Natael/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bEnableInputTriggerSupportWarnings=False
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=True
+bEnableContextMenuTimeSlicing=True
+ContextMenuTimeSlicingThresholdMs=50
+bIncludeActionsForSelectedAssetsInContextMenu=False
+bLimitAssetActionBindingToSingleSelectionOnly=False
+bLoadSelectedAssetsForContextMenuActionBinding=True
+bDoNotMarkAllInstancesDirtyOnDefaultValueChange=True
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
