--- a/control_UE/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/control_UE/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -157,6 +157,10 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/FORGET_Natael/Maps/ThirdPersonMap
@@ -165,15 +169,19 @@ LastLevel=/Game/FORGET_Natael/Maps/ThirdPersonMap
 CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/FORGET_Natael/Blueprints/BP_Money.BP_Money
+OpenAssetsAtExit=/Game/FORGET_Natael/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
+OpenAssetsAtExit=/Game/FORGET_Natael/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/FORGET_Natael/Blueprints/BP_Money
+MRUItem0=/Game/FORGET_Natael/Blueprints/BP_ThirdPersonCharacter
 MRUItem1=/Game/FORGET_Natael/Blueprints/BP_ThirdPersonGameMode
-MRUItem2=/Game/FORGET_Natael/Blueprints/WBP_UI
-MRUItem3=/Game/FORGET_Natael/Maps/ThirdPersonMap
+MRUItem2=/Game/FORGET_Natael/Blueprints/BP_Money
+MRUItem3=/Game/FORGET_Natael/Blueprints/WBP_UI
+MRUItem4=/Game/FORGET_Natael/Maps/ThirdPersonMap
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -232,21 +240,21 @@ BP_ThirdPersonCharacter_C.Events=True
 BP_ThirdPersonCharacter_C.Materials=True
 StaticMeshActor.TransformCommon=True
 StaticMeshActor.StaticMesh=True
-StaticMeshActor.Materials=True
-StaticMeshActor.Physics=True
-StaticMeshActor.Collision=True
-StaticMeshActor.Lighting=True
-StaticMeshActor.Rendering=True
-StaticMeshActor.HLOD=True
-StaticMeshActor.PathTracing=True
-StaticMeshActor.Navigation=True
-StaticMeshActor.VirtualTexture=True
-StaticMeshActor.Tags=True
-StaticMeshActor.Cooking=True
-StaticMeshActor.Replication=True
-StaticMeshActor.Networking=True
-StaticMeshActor.WorldPartition=True
-StaticMeshActor.Actor=True
+StaticMeshActor.Materials=False
+StaticMeshActor.Physics=False
+StaticMeshActor.Collision=False
+StaticMeshActor.Lighting=False
+StaticMeshActor.Rendering=False
+StaticMeshActor.HLOD=False
+StaticMeshActor.PathTracing=False
+StaticMeshActor.Navigation=False
+StaticMeshActor.VirtualTexture=False
+StaticMeshActor.Tags=False
+StaticMeshActor.Cooking=False
+StaticMeshActor.Replication=False
+StaticMeshActor.Networking=False
+StaticMeshActor.WorldPartition=False
+StaticMeshActor.Actor=False
 PlayerStart.TransformCommon=True
 PlayerStart.Object=True
 PlayerStart.Rendering=True
@@ -326,6 +334,50 @@ StaticMeshComponent.Tags=True
 StaticMeshComponent.ComponentReplication=True
 StaticMeshComponent.Cooking=True
 StaticMeshComponent.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+StaticMeshComponent.LOD=True
+StaticMeshComponent.MaterialParameters=True
+StaticMeshComponent.Mobile=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+BP_Money_C.Default=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+StaticMeshComponent.RayTracing=True
+StaticMeshComponent.TextureStreaming=True
+StaticMeshComponent.Replication=True
+BP_Money_C.LevelInstance=True
+BP_Money_C.Cooking=True
+PropertyWrapper.Events=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+K2Node_VariableSet.Events=True
+K2Node_VariableGet.Events=True
+KillZVolume.TransformCommon=True
+KillZVolume.CharacterMovement=True
+KillZVolume.Volume=True
+KillZVolume.HLOD=True
+KillZVolume.Collision=True
+KillZVolume.PathTracing=True
+KillZVolume.BrushSettings=True
+KillZVolume.Navigation=True
+KillZVolume.Tags=True
+KillZVolume.Cooking=True
+KillZVolume.Replication=True
+KillZVolume.Networking=True
+KillZVolume.WorldPartition=True
+KillZVolume.Actor=True
+BP_TpBack_C.Tick=True
+BP_TpBack_C.Replication=True
+BP_TpBack_C.Rendering=True
+BP_TpBack_C.Collision=True
+BP_TpBack_C.Actor=True
+BP_TpBack_C.Input=True
+BP_TpBack_C.HLOD=True
+BP_TpBack_C.Physics=True
+BP_TpBack_C.WorldPartition=True
+BP_TpBack_C.Events=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -367,7 +419,20 @@ Synth=False
 User Created=False
 Advanced=False
 
+[DetailCustomWidgetExpansion]
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Materials.MaterialList
+BP_Money_C=BP_Money_C.TransformCommon.Transform
+SceneComponent=BP_Money_C.TransformCommon.Transform
+PropertyWrapper=BP_Money_C.TransformCommon.Transform
+K2Node_VariableSet=BP_Money_C.TransformCommon.Transform
+K2Node_VariableGet=BP_Money_C.TransformCommon.Transform
+StaticMeshActor=BP_Money_C.TransformCommon.Transform
+KillZVolume=BP_Money_C.TransformCommon.Transform
+BrushComponent=BP_Money_C.TransformCommon.Transform
+BP_TpBack_C=BP_Money_C.TransformCommon.Transform
+
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.KillZVolume;/Engine/Transient.ActorFactoryBoxVolume_13
 RecentlyPlaced=/Game/FORGET_Natael/Blueprints/BP_Money.BP_Money;
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 
@@ -452,9 +517,14 @@ TreeViewWidth=0.300000
 [DetailCategoriesAdvanced]
 TextBlock.Appearance=True
 TextBlock.Accessibility=False
+PropertyWrapper.Variable=False
+StaticMeshActor.StaticMesh=False
 
 [AssetEditorToolkitTabLocation]
 /Game/FORGET_Natael/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode=1
+/Game/FORGET_Natael/Blueprints/BP_Money.BP_Money=1
+/Game/FORGET_Natael/Blueprints/WBP_UI.WBP_UI=1
+/Game/FORGET_Natael/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -505,4 +575,16 @@ PerBlueprintSettings=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
+
+[DetailPropertyExpansion]
+StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent=
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
+Object=
+KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
